stage 4 not completed